# simplegui-tkinter

./: pyproject.toml
jiradeps/: __main__.py  app.py  async_worker.py  settings.py
simplegui/: __main__.py  app.py
testserver/: pyproject.toml  server.py
