[tool.poetry]
name = "jira-deps"
version = "0.1.0"
description = ""
authors = ["kupce <kupec-k@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.1"
loguru = "^0.7.0"
pydantic-settings = "^2.0.2"
platformdirs = "^3.10.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
