[tool.poetry]
name = "testserver"
version = "0.1.0"
description = ""
authors = ["Dmitry Kostromin <kupec-k@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = {extras = ["standart"], version = "^0.23.2"}
black = "^23.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
